--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,12 +65,12 @@
   border-radius: 50%;
   background-color: #fefefe;
   position: relative;
-  svg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
+}
+.svgBox svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 @media (max-width: 768px) {
   .hero-title,.hero-subtitle {
