--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -29,6 +29,22 @@
     }
   }
 }
+.card-animation {
+  opacity: 0;
+  transform: translateY(1rem); /* 对应 translate-y-4 */
+  transition: all 0.5s ease-in-out 0.1s; /* duration-500, ease-in-out, delay-100 */
+}
+
+.card-animation-enter {
+  opacity: 1;
+  transform: translateY(0); /* 对应 translate-y-0 */
+}
+
+.card-hover:hover {
+  transform: translateY(4);
+  transform: scale(1.5) translateY(-10px);
+  transition: transform 0.1s ease-in-out;
+}
 
 @media (max-width: 425px) {
   .imageGroup { 
