--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -39,11 +39,14 @@
   opacity: 1;
   transform: translateY(0); /* 对应 translate-y-0 */
 }
-
-.card-hover:hover {
-  transform: translateY(4);
-  transform: scale(1.5) translateY(-10px);
-  transition: transform 0.1s ease-in-out;
+.card-hover {
+  // cursor: pointer;
+  transition: all 0.2s;
+  &:hover {
+    // transform: translateY(4);
+    transform: scale(1.1);
+    transition: transform 0.1s ease-in-out;
+  }
 }
 
 @media (max-width: 425px) {
