--- a/src/styles/title.module.scss
+++ b/src/styles/title.module.scss
@@ -5,6 +5,8 @@
     .title {
       font-size: 1.5rem;
       color: #006AA6;
+      // -webkit-text-stroke: 0.8px #006AA6;
+      // text-shadow: 1px 1px 0 #006AA6, -1px -1px 0 #006AA6, -1px 1px 0 #006AA6, 1px -1px 0 #006AA6, 1px 1px 0 #006AA6;
     }
     .subtitle {
       font-size: 1.25rem;
