增加導覽列位置及調整背景色

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,12 +46,14 @@
 }
 .topDecoration {
   top: 0;
-  right: 24px
+  right: 24px;
+  opacity: 0.3;
 }
 .bottomDecoration {
   bottom: 0;
   left: 24px;
   transform: rotate(180deg);
+  opacity: 0.3;
 }
 .svgGroup {
   width: 100%;
@@ -79,6 +81,13 @@
   .infoBox {
     width:100%;
     display: block;
+  }
+  .infoBox .svgBox {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .infoBox .title {
+    text-align: center;
   }
 }
 @media (max-width: 425px) {
