--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -43,9 +43,15 @@
   // cursor: pointer;
   transition: all 0.2s;
   &:hover {
-    // transform: translateY(4);
+    transform: translateY(4);
     transform: scale(1.1);
     transition: transform 0.1s ease-in-out;
+  }
+}
+#tech {
+  .bg-primary-100::after {
+    content: '';
+    
   }
 }
 
