調整標題文字置中;調整副標題顏色;調整優勢字型大小

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,6 +74,9 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
+.svgGroup .infoBox {
+  width: 100%;
+}
 @media (max-width: 768px) {
   .hero-title,.hero-subtitle {
     line-height: 3rem;
