--- a/src/styles/title.module.scss
+++ b/src/styles/title.module.scss
@@ -5,15 +5,15 @@
     // min-width: 200px;
     z-index: 999;
     .title {
-      font-size: 1.5rem;
+      font-size: 2rem;
       color: #006AA6;
       // -webkit-text-stroke: 0.8px #006AA6;
       // text-shadow: 1px 1px 0 #006AA6, -1px -1px 0 #006AA6, -1px 1px 0 #006AA6, 1px -1px 0 #006AA6, 1px 1px 0 #006AA6;
     }
     .subtitle {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       font-weight: bold;
-      color: #00324E;
+      color: #40657A;
     }
   }
   .decoration {
