--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,8 +14,9 @@
 
 /* nav-bar */
 .nav-bg {
-  background-color: rgba(255,255,255,0.6);
-  backdrop-filter: blur(5px);
+  /* background-color: rgba(255,255,255,0.6);
+  backdrop-filter: blur(5px); */
+  z-index: 999;
 }
 /* Hero */
 /* .bg {
