--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
   background-position: center;
   background-repeat: no-repeat;
 } */
-/* 多樣功能部分的上下圖 */
+/* 養殖專家系統部分的上下圖 */
 .topDecoration {
   top: 0;
   right: 24px;
