--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,9 @@
     font-family: "Noto Sans TC", system-ui,sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 /* nav-bar */
 .nav-bg {
   /* background-color: rgba(255,255,255,0.6);
