--- a/src/styles/informationTechnology.module.scss
+++ b/src/styles/informationTechnology.module.scss
@@ -4,7 +4,7 @@
     flex: 0 0 20%;
     span {
       padding: 4px 8px;
-      background-color: rgba(#006AA6,0.1);
+      background-color: rgba(#fefefe,0.8);
       backdrop-filter: blur(5px);
       border-radius: 4px;
       color: #00324E;
